--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7,6 +7,14 @@ body {
   padding: 0;
 }
 
+h1 {
+  font-size: 14px;
+}
+
+#textav {
+  font-size: 11px;
+}
+
 header {
   text-align: center;
 }
@@ -20,7 +28,9 @@ header {
 fieldset {
   border-radius: 12px;
   padding: 1em;
+  background-color: antiquewhite;
 }
+
 
 em {
   color: #555;
